ref other interets

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
       <h4>Hey, I'm <span>Sean</span></h4>
       <p>Perpetually bored software dev. Likes infrastructure stuff with a fondness for networking and Go. <em>Build first, regret later</em></p>
       <p>Feels most at home on while travelling / on the road.</p>
+      <p>In previous lives I would have claimed to be a photographer, a graphics designer (illustrator / animator), and a sound / lighting technician</p>
     </section>
 
     <section>
