switch mark/span styles

--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
       <h1><a href="/">E</a></h1>
       <h1><a href="/">A</a></h1>
       <h1><a href="/">N</a></h1>
-      <h2><a href="/"><span>K</span></a></h2>
-      <h2><a href="/"><span>.</span></a></h2>
-      <h2><a href="/"><span>H</span></a></h2>
-      <h2><a href="/"><span>.</span></a></h2>
+      <h2><a href="/"><mark>K</mark></a></h2>
+      <h2><a href="/"><mark>.</mark></a></h2>
+      <h2><a href="/"><mark>H</mark></a></h2>
+      <h2><a href="/"><mark>.</mark></a></h2>
       <h2><a href="/">L</a></h2>
       <h2><a href="/">I</a></h2>
       <h2><a href="/">A</a></h2>
@@ -61,14 +61,14 @@
     </header>
 
     <section>
-      <h4>Hey, I'm <span>Sean</span></h4>
+      <h4>Hey, I'm <mark>Sean</mark></h4>
       <p>Perpetually bored software dev. Likes infrastructure stuff with a fondness for networking and Go. <em>Build first, regret later</em></p>
       <p>Feels most at home on while travelling / on the road.</p>
       <p>In previous lives I would have claimed to be a photographer, a graphics designer (illustrator / animator), and a sound / lighting technician</p>
     </section>
 
     <section>
-      <h5>Where to <span>Find</span> Me</h5>
+      <h5>Where to <mark>Find</mark> Me</h5>
       <ul>
         <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam</li>
         <li><a href="https://github.com/seankhliao">Github</a> &mdash; browsing for fun stuff to contribute to</li>
@@ -77,7 +77,7 @@
     </section>
 
     <section>
-      <h5>Get Into My <span>Mind</span></h5>
+      <h5>Get Into My <mark>Mind</mark></h5>
       <ul>
         <li>
           <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a>
@@ -104,19 +104,19 @@
     </picture>
 
     <section>
-      <h5>Travel <span>Log</span></h5>
+      <h5>Travel <mark>Log</mark></h5>
       <ul>
-        <li>England &mdash; <span>2009 - 2011</span></li>
+        <li>England &mdash; <mark>2009 - 2011</mark></li>
         <li>Hong Kong &mdash; 2017-08</li>
         <li>Indonesia &mdash; 2017-02, 2017-08, 2018-02, 2018-12</li>
         <li>India &mdash; 2015-08</li>
         <li>Japan &mdash; 2018-03</li>
         <li>S. Korea &mdash; 2018-06</li>
         <li>Philipines &mdash; 2017-08</li>
-        <li>Russia &mdash; <span>2000 - 2005</span></li>
+        <li>Russia &mdash; <mark>2000 - 2005</mark></li>
         <li>Sweden &mdash; 2018-01</li>
         <li>Singapore &mdash; 2017-01</li>
-        <li>Taiwan &mdash; <span>1996 - 2000, 2005 - 2009, 2011 - 2019</span></li>
+        <li>Taiwan &mdash; <mark>1996 - 2000, 2005 - 2009, 2011 - 2019</mark></li>
         <li>Timor-Leste &mdash; 2018-02</li>
       </ul>
     </section>
