--- a/src/style.html
+++ b/src/style.html
@@ -47,10 +47,10 @@
       <h1><a href="/">E</a></h1>
       <h1><a href="/">A</a></h1>
       <h1><a href="/">N</a></h1>
-      <h2><a href="/"><span>K</span></a></h2>
-      <h2><a href="/"><span>.</span></a></h2>
-      <h2><a href="/"><span>H</span></a></h2>
-      <h2><a href="/"><span>.</span></a></h2>
+      <h2><a href="/"><mark>K</mark></a></h2>
+      <h2><a href="/"><mark>.</mark></a></h2>
+      <h2><a href="/"><mark>H</mark></a></h2>
+      <h2><a href="/"><mark>.</mark></a></h2>
       <h2><a href="/">L</a></h2>
       <h2><a href="/">I</a></h2>
       <h2><a href="/">A</a></h2>
