--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">S</h1>
+      <h1><a href="/">S</a></h1>
       <h1><a href="/">E</a></h1>
       <h1><a href="/">A</a></h1>
       <h1><a href="/">N</a></h1>
