--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Archivo:400,400i|Lora:700" />
-    <link rel="preload" as="style" href="./base.css"/>
+    <link rel="preload" as="style" href="./base.css" />
     <link rel="preload" as="image" href="./map.webp" />
 
     <title>Sean Liao</title>
@@ -41,30 +41,44 @@
         });
     </script>
 
-    <link href="https://fonts.googleapis.com/css?family=Archivo:400,400i|Lora:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo:400,400i|Lora:700" rel="stylesheet" />
     <link rel="stylesheet" href="./base.css" />
   </head>
   <body>
     <header>
-      <h1><a href="/">S</a></h1>
-      <h1><a href="/">E</a></h1>
-      <h1><a href="/">A</a></h1>
-      <h1><a href="/">N</a></h1>
-      <h2><a href="/"><mark>K</mark></a></h2>
-      <h2><a href="/"><mark>.</mark></a></h2>
-      <h2><a href="/"><mark>H</mark></a></h2>
-      <h2><a href="/"><mark>.</mark></a></h2>
-      <h2><a href="/">L</a></h2>
-      <h2><a href="/">I</a></h2>
-      <h2><a href="/">A</a></h2>
-      <h2><a href="/">O</a></h2>
+      <h1><a href="/" tabindex="-1">S</a></h1>
+      <h1><a href="/" tabindex="-1">E</a></h1>
+      <h1><a href="/" tabindex="-1">A</a></h1>
+      <h1><a href="/" tabindex="-1">N</a></h1>
+      <h2>
+        <a href="/" tabindex="-1"><mark>K</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>.</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>H</mark></a>
+      </h2>
+      <h2>
+        <a href="/" tabindex="-1"><mark>.</mark></a>
+      </h2>
+      <h2><a href="/" tabindex="-1">L</a></h2>
+      <h2><a href="/" tabindex="-1">I</a></h2>
+      <h2><a href="/" tabindex="-1">A</a></h2>
+      <h2><a href="/" tabindex="-1">O</a></h2>
     </header>
 
     <section>
       <h4>Hey, I'm <mark>Sean</mark></h4>
-      <p>Perpetually bored software dev. Likes infrastructure stuff with a fondness for networking and Go. <em>Build first, regret later</em></p>
+      <p>
+        Perpetually bored software dev. Likes infrastructure stuff with a fondness for networking and Go.
+        <em>Build first, regret later</em>
+      </p>
       <p>Feels most at home on while travelling / on the road.</p>
-      <p>In previous lives I would have claimed to be a photographer, a graphics designer (illustrator / animator), and a sound / lighting technician</p>
+      <p>
+        In previous lives I would have claimed to be a photographer, a graphics designer (illustrator / animator), and a
+        sound / lighting technician
+      </p>
     </section>
 
     <section>
@@ -73,6 +87,7 @@
         <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam</li>
         <li><a href="https://github.com/seankhliao">Github</a> &mdash; browsing for fun stuff to contribute to</li>
         <li><a href="https://github.com/erred">Github Org</a> &mdash; of old code, decluttering my main profile</li>
+        <li><a href="./travel-checklist/">checklist/travel</a> &mdash; travel checklist</li>
       </ul>
     </section>
 
