--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
         <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam</li>
         <li><a href="https://github.com/seankhliao">Github</a> &mdash; browsing for fun stuff to contribute to</li>
         <li><a href="https://github.com/erred">Github Org</a> &mdash; of old code, decluttering my main profile</li>
-        <li><a href="./travel-checklist/">checklist/travel</a> &mdash; travel checklist</li>
+        <li><a href="./travel-checklist/">Checklist / Travel</a> &mdash; travel checklist</li>
       </ul>
     </section>
 
