--- a/src/travel-checklist.html
+++ b/src/travel-checklist.html
@@ -137,7 +137,7 @@
       <h2><a href="/" tabindex="-1">I</a></h2>
       <h2><a href="/" tabindex="-1">A</a></h2>
       <h2><a href="/" tabindex="-1">O</a></h2>
-      <h3><a href="/notes/">Checklist / Travel</a></h3>
+      <h3><a href="." tabindex="-1">Checklist / Travel</a></h3>
     </header>
 
     <section>
@@ -194,7 +194,7 @@
       <legend>
         <h5><mark>Probably</mark></h5>
       </legend>
-      <p><span>Not essential, but a good idea</span></p>
+      <p><span>Things that you might want</span></p>
       <dl>
         <dt>
           <input id="p1" form="f" type="checkbox" />
@@ -250,7 +250,7 @@
       <legend>
         <h5><mark>Tech</mark></h5>
       </legend>
-      <p><span>everything needs electricty these days</span></p>
+      <p><span>Everything needs electricty these days</span></p>
       <dl>
         <dt>
           <input id="t1" form="f" type="checkbox" />
@@ -356,7 +356,7 @@
           <input id="h1" form="f" type="checkbox" />
           <label for="h1">Shaver</label>
         </dt>
-        <dd>+charger</dd>
+        <dd>+Charger</dd>
 
         <dt>
           <input id="h2" form="f" type="checkbox" />
