add us/canada to listing

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,6 @@
         <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam</li>
         <li><a href="https://github.com/seankhliao">Github</a> &mdash; browsing for fun stuff to contribute to</li>
         <li><a href="https://github.com/erred">Github Org</a> &mdash; of old code, decluttering my main profile</li>
-        <li><a href="./travel-checklist/">Checklist / Travel</a> &mdash; travel checklist</li>
       </ul>
     </section>
 
@@ -121,6 +120,7 @@
     <section>
       <h5>Travel <mark>Log</mark></h5>
       <ul>
+        <li>Canada &mdash; 2019-04</li>
         <li>England &mdash; <mark>2009 - 2011</mark></li>
         <li>Hong Kong &mdash; 2017-08</li>
         <li>Indonesia &mdash; 2017-02, 2017-08, 2018-02, 2018-12</li>
@@ -133,6 +133,7 @@
         <li>Singapore &mdash; 2017-01</li>
         <li>Taiwan &mdash; <mark>1996 - 2000, 2005 - 2009, 2011 - 2019</mark></li>
         <li>Timor-Leste &mdash; 2018-02</li>
+        <li>United States &mdash; 2019-04</li>
       </ul>
     </section>
   </body>
