--- a/src/index.html
+++ b/src/index.html
@@ -71,22 +71,21 @@
     <section>
       <h4>Hey, I'm <mark>Sean</mark></h4>
       <p>
-        Perpetually bored software dev. Likes infrastructure stuff with a fondness for networking and Go.
-        <em>Build first, regret later</em>
+        Perpetually bored <span>software dev</span>. Likes infrastructure stuff with a fondness for networking and Go.
       </p>
       <p>Feels most at home on while travelling / on the road.</p>
       <p>
-        In previous lives I would have claimed to be a photographer, a graphics designer (illustrator / animator), and a
-        sound / lighting technician
+        In previous lives I might have been a photographer, a graphics designer (illustrator / animator), and a sound /
+        lighting technician
       </p>
     </section>
 
     <section>
       <h5>Where to <mark>Find</mark> Me</h5>
       <ul>
-        <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; please no spam</li>
-        <li><a href="https://github.com/seankhliao">Github</a> &mdash; browsing for fun stuff to contribute to</li>
-        <li><a href="https://github.com/erred">Github Org</a> &mdash; of old code, decluttering my main profile</li>
+        <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; mail, for <em>me</em>?</li>
+        <li><a href="https://github.com/seankhliao">Github</a> &mdash; build first, regret later</li>
+        <li><a href="https://github.com/erred">Github Org</a> &mdash; where old code goes to die</li>
       </ul>
     </section>
 
