--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
     <section>
       <h4>Hey, I'm <mark>Sean</mark></h4>
       <p>
-        Perpetually bored <span>software dev</span>. Likes infrastructure stuff with a fondness for networking and Go.
+        Perpetually bored <mark>software dev</mark>. Likes infrastructure stuff with a fondness for networking and Go.
       </p>
       <p>Feels most at home on while travelling / on the road.</p>
       <p>
