add link to blog

--- a/src/index.html
+++ b/src/index.html
@@ -70,19 +70,18 @@
 
     <section>
       <h4>Hey, I'm <mark>Sean</mark></h4>
-      <p>
-        Perpetually bored <mark>software dev</mark>. Likes infrastructure stuff with a fondness for networking and Go.
-      </p>
-      <p>Feels most at home on while travelling / on the road.</p>
-      <p>
-        In previous lives I might have been a photographer, a graphics designer (illustrator / animator), and a sound /
-        lighting technician
-      </p>
+
+      <h6><mark>Bleeding Edge Software Developer</mark></h6>
+      <p>I have too much time to follow the hype and my stuff is always half-broken</p>
+
+      <h6><mark>Cloud Native Gopher</mark></h6>
+      <p>Writes <strong>Go</strong>, runs <strong>Kubernetes</strong></p>
     </section>
 
     <section>
       <h5>Where to <mark>Find</mark> Me</h5>
       <ul>
+        <li><a href="https://blog.seankhliao.com">Blog</a> &mdash; home of random thoughts</li>
         <li><a href="mailto:seankhliao@gmail.com">Email</a> &mdash; mail, for <em>me</em>?</li>
         <li><a href="https://github.com/seankhliao">Github</a> &mdash; build first, regret later</li>
         <li><a href="https://github.com/erred">Github Org</a> &mdash; where old code goes to die</li>
