add readss to index

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,9 @@ body {
           — pop?
         </li>
         <li>
+          <a href="/readss">readss</a> — feed of things to read
+        </li>
+        <li>
           <a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness
         </li>
       </ul>
