--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -1,4 +1,5 @@
 {{ template "head" }}
+<link rel="preconnect" href="https://api.seankhliao.com/" crossorigin />
 <title>readss | seankhliao</title>
 
 <script async src="/readss/index.js"></script>
