--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -5,6 +5,9 @@
 <script async src="/readss/index.js"></script>
 
 <style>
+  html::-webkit-scrollbar {
+    display: none;
+  }
   /* https://tobiasahlin.com/spinkit/ */
   .sk-cube-grid {
     width: 40px;
