--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -5,7 +5,7 @@
 <script async src="/readss/index.js"></script>
 
 <style>
-  html::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     display: none;
   }
   /* https://tobiasahlin.com/spinkit/ */
