squeeze metadata line

--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -8,6 +8,10 @@
   ::-webkit-scrollbar {
     display: none;
   }
+  li mark,
+  li time {
+    font-size: 0.75em;
+  }
   /* https://tobiasahlin.com/spinkit/ */
   .sk-cube-grid {
     width: 40px;
