add left margin to metadat line

--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -12,6 +12,9 @@
   li time {
     font-size: 0.75em;
   }
+  li mark {
+    margin-left: 2em;
+  }
   /* https://tobiasahlin.com/spinkit/ */
   .sk-cube-grid {
     width: 40px;
