--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -8,12 +8,12 @@
   ::-webkit-scrollbar {
     display: none;
   }
-  li mark,
-  li time {
-    font-size: 0.75em;
+  li a {
+    font-size: 1.2em;
   }
   li mark {
-    margin-left: 2em;
+    display: inline-block;
+    margin: 0.5em 0 0 2em;
   }
   /* https://tobiasahlin.com/spinkit/ */
   .sk-cube-grid {
