use inline block

--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -11,7 +11,8 @@
   li a {
     font-size: 1.2em;
   }
-  li mark {
+  li mark,
+  li time {
     display: inline-block;
     margin: 0.5em 0 0 2em;
   }
