only margin on first

--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -14,7 +14,9 @@
   li mark,
   li time {
     display: inline-block;
-    margin: 0.5em 0 0 2em;
+  }
+  li mark {
+    margin: 0.5em 0 0 1em;
   }
   /* https://tobiasahlin.com/spinkit/ */
   .sk-cube-grid {
