--- a/src/authed/index.html
+++ b/src/authed/index.html
@@ -49,6 +49,24 @@ var uiConfig = {
 };
 
 ui.start('#firebaseui-auth-container', uiConfig);
+
+firebase.auth().onAuthStateChanged(function(user) {
+  if (user) {
+    // User is signed in.
+    var displayName = user.displayName;
+    var email = user.email;
+    var emailVerified = user.emailVerified;
+    var photoURL = user.photoURL;
+    var isAnonymous = user.isAnonymous;
+    var uid = user.uid;
+    var providerData = user.providerData;
+    console.log(user);
+    // ...
+  } else {
+    // User is signed out.
+    // ...
+  }
+});
 </script>
 
 {{ template "loader-style" }}
