add firebase ui style

--- a/src/authed/index.html
+++ b/src/authed/index.html
@@ -2,6 +2,7 @@
 <link rel="preconnect" href="https://api.seankhliao.com/" crossorigin />
 <title>authed | seankhliao</title>
 
+<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 <script async src="/authed/index.js"></script>
 
 <h4><a href="/">seankhliao</a> / <mark>authed</mark></h1>
